--- a/app/src/main/res/layout/activity_sign_in_arabic.xml
+++ b/app/src/main/res/layout/activity_sign_in_arabic.xml
@@ -66,7 +66,8 @@
                 android:backgroundTint="@android:color/transparent"
                 android:layout_marginTop="@dimen/margin_16dp"
                 android:hint="@string/password"
-                android:textAlignment="textEnd"
+                android:layout_gravity="right"
+                android:gravity="right"
                 android:inputType="textPassword"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
