--- a/app/src/main/res/layout/activity_sign_up_arabic.xml
+++ b/app/src/main/res/layout/activity_sign_up_arabic.xml
@@ -55,6 +55,7 @@
                 android:layout_marginTop="@dimen/margin_16dp"
                 android:hint="@string/username"
                 android:layout_gravity="right"
+                android:gravity="right"
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
@@ -69,8 +70,8 @@
                 android:backgroundTint="@android:color/transparent"
                 android:layout_marginTop="@dimen/margin_16dp"
                 android:hint="@string/password"
+                android:gravity="right"
                 android:inputType="textWebPassword"
-                android:textAlignment="textEnd"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:padding="@dimen/margin_16dp">
@@ -82,10 +83,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="phone"
-                android:textAlignment="textEnd"
                 android:backgroundTint="@android:color/transparent"
                 android:layout_marginTop="@dimen/margin_16dp"
                 android:hint="@string/mobileno"
+                android:gravity="right"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:padding="@dimen/margin_16dp">
