--- a/app/src/main/res/layout/offerdetails_layout.xml
+++ b/app/src/main/res/layout/offerdetails_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background">
 
