--- a/app/src/main/res/layout/activity_map_screen.xml
+++ b/app/src/main/res/layout/activity_map_screen.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/shadow"
-    android:padding="@dimen/margin_16dp"
+    android:paddingLeft="@dimen/margin_16dp"
+    android:paddingRight="@dimen/margin_16dp"
     tools:context=".MapScreen.MapScreen">
 
 
