--- a/app/src/main/res/layout/fragment_my_account_arabic.xml
+++ b/app/src/main/res/layout/fragment_my_account_arabic.xml
@@ -27,6 +27,24 @@
                 android:orientation="vertical"
                 android:background="@color/theme">
 
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/logout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/roundbt_fill"
+                    app:backgroundTint="@color/gold"
+                    android:text="Logout"
+                    android:visibility="gone"
+                    android:layout_margin="@dimen/margin_8dp"
+                    android:textSize="@dimen/textsize_10sp"
+                    android:textColor="@color/black"
+                    android:textAllCaps="false"
+                    android:layout_marginTop="@dimen/margin_8dp">
+
+                </com.google.android.material.button.MaterialButton>
+
+
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/profile_picture"
                     android:layout_width="150dp"
