--- a/app/src/main/res/layout/fragment_my_account_arabic.xml
+++ b/app/src/main/res/layout/fragment_my_account_arabic.xml
@@ -44,18 +44,38 @@
 
                 </com.google.android.material.button.MaterialButton>
 
-
-                <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/profile_picture"
+                <RelativeLayout
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_gravity="center"
-                    app:riv_oval="true"
                     android:layout_margin="@dimen/margin_32dp"
-                    android:src="@drawable/main1"
-                    android:scaleType="fitXY">
+                    android:gravity="center">
 
-                </com.makeramen.roundedimageview.RoundedImageView>
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/profile_picture"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_gravity="center"
+                        app:riv_oval="true"
+                        android:src="@drawable/main1"
+                        android:scaleType="fitXY">
+
+                    </com.makeramen.roundedimageview.RoundedImageView>
+
+
+                    <ImageButton
+                        android:id="@+id/edit_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_baseline_edit_24"
+                        android:layout_margin="@dimen/margin_8dp">
+
+                    </ImageButton>
+                </RelativeLayout>
+
+
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -90,6 +110,7 @@
                         android:layout_centerVertical="true"
                         android:background="@android:color/transparent"
                         android:text="@string/edit"
+                        android:visibility="gone"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize_16sp"
                         android:textAllCaps="false"
@@ -137,6 +158,7 @@
                         android:layout_centerVertical="true"
                         android:background="@android:color/transparent"
                         android:text="@string/edit"
+                        android:visibility="gone"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize_16sp"
                         android:textAllCaps="false"
@@ -184,6 +206,7 @@
                         android:layout_centerVertical="true"
                         android:background="@android:color/transparent"
                         android:text="@string/edit"
+                        android:visibility="gone"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize_16sp"
                         android:textAllCaps="false"
@@ -232,6 +255,7 @@
                         android:text="@string/edit"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize_16sp"
+                        android:visibility="gone"
                         android:textAllCaps="false"
                         android:layout_marginTop="@dimen/margin_16dp"
                         android:layout_alignParentLeft="true">
@@ -254,13 +278,13 @@
                     android:layout_margin="@dimen/margin_16dp">
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/cancel_bt"
+                        android:id="@+id/edit_bt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/roundbt_fill"
                         app:backgroundTint="@color/gold"
-                        android:text="@string/canceltext"
+                        android:text="@string/edit"
                         android:layout_margin="@dimen/margin_8dp"
                         android:textSize="@dimen/textsize_10sp"
                         android:textColor="@color/black"
@@ -269,21 +293,6 @@
 
                     </com.google.android.material.button.MaterialButton>
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/signin_bt"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textSize="@dimen/textsize_10sp"
-                        android:background="@drawable/roundbt_fill"
-                        app:backgroundTint="@color/gold"
-                        android:text="@string/saveedits"
-                        android:layout_margin="@dimen/margin_8dp"
-                        android:textColor="@color/black"
-                        android:textAllCaps="false"
-                        android:layout_marginTop="@dimen/margin_8dp">
-
-                    </com.google.android.material.button.MaterialButton>
                 </LinearLayout>
             </LinearLayout>
 
