--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -6,22 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".homescreen.HomeScreen">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/union"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/margin_8dp">
 
-    </ImageView>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/union"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/margin_8dp">
+
+            </ImageView>
+
+        </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
+
+
 
     <ImageButton
         android:id="@+id/search_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_search"
-        android:layout_below="@id/image"
+        android:layout_below="@id/toolbar"
         android:layout_alignParentLeft="true"
         android:layout_margin="@dimen/margin_16dp"
         android:background="@android:color/transparent">
@@ -33,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/ic_offer"
-        android:layout_below="@id/image"
+        android:layout_below="@id/toolbar"
         android:text="@string/offers"
         android:drawablePadding="5dp"
         android:gravity="center"
@@ -52,7 +66,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/textsize_24sp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/image"
+        android:layout_below="@id/toolbar"
         android:layout_marginTop="@dimen/margin_8dp"
         android:textColor="@color/gold">
 
