--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -90,6 +90,7 @@
                         android:hint="@string/username"
                         android:layout_toLeftOf="@id/edit_username"
                         android:inputType="textPersonName"
+                        android:enabled="false"
                         android:textColor="@color/gold"
                         android:textColorHint="@color/gold"
                         android:padding="@dimen/margin_16dp">
@@ -131,7 +132,8 @@
                         android:layout_height="wrap_content"
                         android:backgroundTint="@android:color/transparent"
                         android:layout_marginTop="@dimen/margin_16dp"
-                        android:hint="@string/password"
+                        android:hint="***********"
+                        android:enabled="false"
                         android:layout_toLeftOf="@id/edit_password"
                         android:inputType="textPassword"
                         android:textColor="@color/gold"
@@ -169,18 +171,37 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <TextView
+                        android:id="@+id/code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="+971"
+                        android:textColor="@color/gold"
+                        android:textSize="18sp"
+                        android:layout_marginTop="@dimen/margin_16dp"
+                        android:textAlignment="center"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="5dp"
+                        android:paddingLeft="@dimen/margin_16dp"
+                        android:layout_marginBottom="@dimen/margin_16dp">
+
+                    </TextView>
+
                     <EditText
                         android:id="@+id/number_et"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@android:color/transparent"
                         android:layout_marginTop="@dimen/margin_16dp"
+                        android:layout_toRightOf="@id/code"
                         android:hint="@string/number"
+                        android:enabled="false"
+                        android:textAlignment="textStart"
                         android:layout_toLeftOf="@id/edit_number"
                         android:inputType="number"
                         android:textColor="@color/gold"
                         android:textColorHint="@color/gold"
-                        android:padding="@dimen/margin_16dp">
+                        android:layout_marginBottom="@dimen/margin_16dp">
 
                     </EditText>
 
@@ -220,6 +241,7 @@
                         android:backgroundTint="@android:color/transparent"
                         android:layout_marginTop="@dimen/margin_16dp"
                         android:hint="@string/email"
+                        android:enabled="false"
                         android:layout_toLeftOf="@id/edit_email"
                         android:inputType="textEmailAddress"
                         android:textColor="@color/gold"
