--- a/app/src/main/res/layout/activity_event_services_screen.xml
+++ b/app/src/main/res/layout/activity_event_services_screen.xml
@@ -100,6 +100,7 @@
             </TextView>
 
             <RatingBar
+                android:id="@+id/rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/Widget.AppCompat.RatingBar.Small"
