--- a/app/src/main/res/layout/booking_confirmation.xml
+++ b/app/src/main/res/layout/booking_confirmation.xml
@@ -67,7 +67,7 @@
             android:layout_weight="1"
             android:background="@drawable/roundbt_fill"
             app:backgroundTint="@color/gold"
-            android:text="@string/canceltext"
+            android:text="@string/ok"
             android:textSize="@dimen/textsize_10sp"
             android:layout_margin="@dimen/margin_8dp"
             android:textColor="@color/black"
@@ -81,6 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:visibility="gone"
             android:textSize="@dimen/textsize_10sp"
             android:background="@drawable/roundbt_fill"
             app:backgroundTint="@color/gold"
