--- a/app/src/main/res/layout/mybookinglayout_arabic.xml
+++ b/app/src/main/res/layout/mybookinglayout_arabic.xml
@@ -89,6 +89,7 @@
         android:textColor="@color/black"
         android:text="@string/edit"
         android:textAllCaps="false"
+        android:visibility="gone"
         android:textSize="@dimen/textsize_10sp"
         app:backgroundTint="@color/gold"
         android:layout_toRightOf="@dimen/margin_8dp"
