--- a/app/src/main/res/layout/mybookinglayout.xml
+++ b/app/src/main/res/layout/mybookinglayout.xml
@@ -84,6 +84,7 @@
         android:textColor="@color/black"
         android:text="@string/edit"
         android:textAllCaps="false"
+        android:visibility="gone"
         android:textSize="@dimen/textsize_10sp"
         app:backgroundTint="@color/gold"
         android:layout_marginLeft="@dimen/margin_8dp"
