--- a/app/src/main/res/layout/mybookinglayout.xml
+++ b/app/src/main/res/layout/mybookinglayout.xml
@@ -106,6 +106,7 @@
     </ImageButton>
 
     <Button
+        android:id="@+id/startchat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/clockbt"
