--- a/app/src/main/res/layout/offerdetails_layout.xml
+++ b/app/src/main/res/layout/offerdetails_layout.xml
@@ -140,7 +140,7 @@
             android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:background="@drawable/map"
+            android:padding="3dp"
             android:layout_margin="2dp">
 
         </com.allomashqal.appmapview.AppMapView>
