--- a/app/src/main/res/layout/time.xml
+++ b/app/src/main/res/layout/time.xml
@@ -7,6 +7,7 @@
     android:background="@android:color/transparent">
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/roundbt"
