--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -35,25 +35,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_search"
-        android:layout_below="@id/toolbar"
+        android:layout_below="@id/type"
+        android:visibility="gone"
         android:layout_alignParentLeft="true"
-        android:layout_margin="@dimen/margin_16dp"
+        android:layout_marginLeft="@dimen/margin_16dp"
         android:background="@android:color/transparent">
 
     </ImageButton>
+
+
+    <EditText
+        android:id="@+id/search_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/search_bt"
+        android:visibility="gone"
+        android:backgroundTint="@color/gold"
+        android:inputType="text"
+        android:singleLine="true"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="@dimen/margin_8dp"
+        android:layout_toLeftOf="@id/offer_bt"
+        android:layout_below="@+id/type">
+
+    </EditText>
+
 
     <TextView
         android:id="@+id/offer_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/ic_offer"
-        android:layout_below="@id/toolbar"
+        android:layout_below="@id/type"
         android:text="@string/offers"
         android:drawablePadding="5dp"
         android:gravity="center"
         android:textAlignment="center"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
         android:background="@android:color/transparent">
 
